# GIA_Marketplace

./: .gitignore  00_START_HERE_FIRST.txt  ADMIN_FEATURES_GUIDE.md  ADMIN_PAGES_FIXED.md  AFFILIATE_COMMISSION_SYSTEM.md  ALL_ALIGNMENTS_FIXED.md  ALL_FEATURES_COMPLETE.md  ARTIST_DASHBOARD_SETUP.md  BUILD_SUMMARY.md  CHECKLIST.md  COMMON_QUESTIONS.md  COMPLETE_FIX_CHECKLIST.md  CREATE_ENV_LOCAL.md  DEPLOYMENT.md  DROPDOWN_FILTERS_SUMMARY.md  DROPDOWN_FILTERS_VISUAL.md  ENV_LOCAL_VS_EXAMPLE.txt  ENV_SETUP_GUIDE.md  FEATURES_IMPLEMENTED_SUMMARY.md  FINAL_ALIGNMENT_SUMMARY.md  FINAL_FIXES_COMPLETE.md  FINAL_NAVBAR_DASHBOARD_UPDATES.md  FIREBASE_ERROR_QUICK_FIX.txt  FIX_404_PAGES.md  FIX_FIREBASE_ERROR.md  FIX_FIREBASE_STORAGE_PERMISSIONS.md  FIX_NETWORK_ERROR.md  FIX_TAILWIND_ERROR.md  GET_FIREBASE_CREDENTIALS.md  HOW_TO_GET_CREDENTIALS.txt  IMPLEMENTATION_COMPLETE.md  INDEX.md  LATEST_FIXES_SUMMARY.md  LATEST_UPDATES_COMPLETE.md  LOCAL_FILE_UPLOAD.md  LOGIN_FIX.md  MOBILE_FRIENDLY_SUMMARY.md  MOBILE_IMPLEMENTATION_STATUS.md  MOBILE_INDEX.md  MOBILE_OPTIMIZATION_GUIDE.md  (+37 more)
api/: .env.example  auth_service.py  build.sh  config.py  firebase_service.py  main.py  models.py  pyproject.toml  razorpay_service.py  requirements.txt  serviceAccount.json  test_firebase.py
web/: .env.local.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Carousel.tsx  ClientProvider.tsx  Footer.tsx  HeroThreeScene.tsx  HorizontalCarousel.tsx  Navbar.tsx
web/src/hooks/: useAuthInit.ts
web/src/lib/: api.ts  (+2 more)
(+36 files in other folders)
